Enhance project configuration and environment management
- Updated .gitignore to include additional environment files, API keys, and backup files for improved security and organization.
- Refactored vite.config.ts to load environment variables dynamically and optimize server settings based on the environment.
- Enhanced App.tsx to configure QueryClient with environment-based options for query and mutation retries.
- Updated Supabase client configuration in client.ts to utilize environment variables for sensitive information and added options for session persistence and headers.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,19 @@ lerna-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.*.local
+.env.backup
+.env.save
+.env.orig
+
+# API Keys and secrets (additional protection)
+*.key
+*.pem
+*.p12
+*.pfx
+secrets.json
+config/secrets.json
+.secrets/
 
 # Editor directories and files
 .vscode/*
@@ -49,3 +62,84 @@ Thumbs.db
 .temp/
 .tmp/
 *.local
+.parcel-cache/
+
+# Runtime and system files
+.pid
+.seed
+.pid.lock
+.coverage
+.nyc_output
+.grunt
+.bower_components
+.lock-wscript
+.node_repl_history
+.npm
+.eslintcache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Python virtual environments and caches
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Backup files
+*.backup
+*.bak
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Security and deployment
+.terraform/
+terraform.tfstate*
+.pulumi/
+.serverless/
+.fusebox/
+
+# Debug and profiling
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.vscode/launch.json
