--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,45 @@
-
 # AI Genesis Engine Dependencies
 
-# Core Python game development
-pygame>=2.5.0
+# Core Python dependencies
+python-dotenv>=1.0.0
+setuptools>=65.0.0
 
-# HTTP client for API calls
-aiohttp>=3.8.0
+# Async HTTP client
+aiohttp>=3.9.0
+aiofiles>=23.0.0
 
-# Optional: Supabase integration (if using Supabase secrets)
+# AI Integration
+anthropic>=0.8.0
+
+# Web Framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+websockets>=12.0
+
+# Supabase (optional)
 supabase>=2.0.0
 
-# Development and testing
+# Retry and resilience
+tenacity>=8.2.0
+
+# Testing
 pytest>=7.0.0
+pytest-asyncio>=0.21.0
+pytest-mock>=3.11.0
+
+# Game dependencies (for generated games)
+pygame>=2.5.0
+
+# Type checking and validation
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+typing_extensions>=4.8.0
+
+# Logging and monitoring
+structlog>=23.0.0
+
+# Development tools
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.0.0
