--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,12 @@ services:
   - type: web
     name: ai-genesis-engine
     runtime: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: uvicorn src.genesis_engine.web_server:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.0
+        value: 3.11.11
       - key: ANTHROPIC_API_KEY
-        sync: false  # Add this in Render dashboard 
+        sync: false  # Add this in Render dashboard
+      - key: FRONTEND_URL
+        value: https://*.lovable.app 
