--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 # AI Genesis Engine - Web Server Dependencies
 
 # Core AI Integration
-anthropic==0.21.3
-openai==1.35.3
+anthropic>=0.21.0,<1.0.0
+openai>=1.35.0,<2.0.0
 
 # Web Framework & Server
-fastapi==0.111.0
-uvicorn[standard]==0.30.1
-gunicorn==21.2.0
-websockets==12.0
-aiofiles==24.1.0
-python-multipart==0.0.9
-aiohttp>=3.9.0
+fastapi>=0.110.0,<1.0.0
+uvicorn[standard]>=0.30.0,<1.0.0
+gunicorn>=21.0.0,<22.0.0
+websockets>=12.0,<13.0
+aiofiles>=24.0.0,<25.0.0
+python-multipart>=0.0.9,<1.0.0
+aiohttp>=3.9.0,<4.0.0
 
-# Data Validation & Settings
-pydantic==2.7.1
-pydantic-settings==2.3.1
-typing-extensions==4.12.2
+# Data Validation & Settings (using flexible versions for better wheel compatibility)
+pydantic>=2.6.0,<3.0.0
+pydantic-settings>=2.2.0,<3.0.0
+typing-extensions>=4.8.0
 
 # Environment & Setup
-python-dotenv==1.0.1
-setuptools==70.1.0
+python-dotenv>=1.0.0,<2.0.0
+setuptools>=69.0.0
 
 # Retry and resilience
 tenacity>=8.2.0
@@ -28,8 +28,8 @@ tenacity>=8.2.0
 # Logging and monitoring
 structlog>=23.0.0
 
-# Optional: Supabase
-supabase>=2.0.0
+# Optional: Supabase (made optional to avoid extra dependencies)
+# supabase>=2.0.0
 
 # Development tools (optional - not needed for production)
 # black>=23.0.0
