Fix Python version to 3.11.9 for Render compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,31 @@
 # AI Genesis Engine - Web Server Dependencies
+# Optimized for Python 3.11.9 and Render deployment
 
 # Core AI Integration
-anthropic>=0.21.0,<1.0.0
-openai>=1.35.0,<2.0.0
+anthropic>=0.20.0,<1.0.0
+openai>=1.30.0,<2.0.0
 
-# Web Framework & Server
-fastapi>=0.110.0,<1.0.0
-uvicorn[standard]>=0.30.0,<1.0.0
-gunicorn>=21.0.0,<22.0.0
-websockets>=12.0,<13.0
-aiofiles>=24.0.0,<25.0.0
-python-multipart>=0.0.9,<1.0.0
-aiohttp>=3.9.0,<4.0.0
+# Web Framework & Server (FastAPI/Pydantic ecosystem)
+fastapi>=0.104.0,<1.0.0
+uvicorn[standard]>=0.24.0,<1.0.0
+gunicorn>=20.0.0,<22.0.0
+websockets>=11.0,<13.0
+aiofiles>=23.0.0,<25.0.0
+python-multipart>=0.0.6,<1.0.0
+aiohttp>=3.8.0,<4.0.0
 
-# Data Validation & Settings (using flexible versions for better wheel compatibility)
-pydantic>=2.6.0,<3.0.0
-pydantic-settings>=2.2.0,<3.0.0
-typing-extensions>=4.8.0
+# Data Validation & Settings (well-tested Pydantic v2 range)
+pydantic>=2.4.0,<3.0.0
+pydantic-settings>=2.0.0,<3.0.0
+typing-extensions>=4.5.0
 
 # Environment & Setup
 python-dotenv>=1.0.0,<2.0.0
-setuptools>=69.0.0
 
 # Retry and resilience
-tenacity>=8.2.0
+tenacity>=8.0.0
 
-# Logging and monitoring
+# Logging (optional - lightweight)
 structlog>=23.0.0
 
 # Optional: Supabase (made optional to avoid extra dependencies)
