--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: ai-genesis-engine
     runtime: python
     buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    startCommand: uvicorn src.genesis_engine.web_server:app --host 0.0.0.0 --port $PORT
+    startCommand: python run_server_prod.py
     envVars:
       - key: ANTHROPIC_API_KEY
         sync: false  # Add this in Render dashboard
