--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,12 @@ services:
   - type: web
     name: ai-genesis-engine
     runtime: python
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    buildCommand: chmod +x deploy_render.sh && ./deploy_render.sh
     startCommand: python -m src.genesis_engine.run_server_prod
     envVars:
       - key: ANTHROPIC_API_KEY
         sync: false  # Add this in Render dashboard
       - key: FRONTEND_URL
-        value: https://code-genesis-play.lovable.app 
+        value: https://code-genesis-play.lovable.app
+      - key: PLAYWRIGHT_BROWSERS_PATH
+        value: /opt/render/project/.cache/ms-playwright 
