Update AI model to Claude Sonnet 4 with optimized fallback hierarchy
This commit updates the primary AI model to Claude Sonnet 4, enhancing cost efficiency and availability. The model hierarchy has been refined to include robust fallbacks, ensuring maximum reliability during operation. Additionally, documentation and configuration files have been updated to reflect these changes, improving clarity and setup for users.

--- a/env.template
+++ b/env.template
@@ -31,6 +31,9 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 # Get your API key from: https://console.anthropic.com/
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
+# Claude model to use (default: Claude Sonnet 4 for optimal cost/performance)
+ANTHROPIC_MODEL=claude-sonnet-4-20250514
+
 # OpenAI API (optional, for additional AI features)
 # Get your API key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
