feat: Implement cloud storage integration and update project documentation
- Added support for cloud storage with S3-compatible services (AWS S3 and Cloudflare R2).
- Updated environment configuration to include cloud storage variables.
- Enhanced GameResult component to display cloud-hosted game URLs.
- Revised PROJECT_SUMMARY.md to reflect the completion of Phase 1 and the implementation of cloud storage.
- Updated main application version to v2.3 and adjusted related components for cloud functionality.
- Improved backend logic to handle game uploads and provide cloud URLs in responses.

--- a/env.template
+++ b/env.template
@@ -86,8 +86,25 @@ GAME_ASSETS_DIR=./test_output/*/assets
 # =============================================================================
 # EXTERNAL SERVICES (OPTIONAL)
 # =============================================================================
-# AWS S3 for file storage (optional)
-# Get these from your AWS console
+# Cloud Storage Configuration (S3-compatible services like AWS S3, Cloudflare R2)
+# This is used for persistent storage of generated games
+
+# For Cloudflare R2 (recommended for free tier):
+# CLOUD_ENDPOINT_URL=https://[account_id].r2.cloudflarestorage.com
+# CLOUD_ACCESS_KEY_ID=your_r2_access_key_id
+# CLOUD_SECRET_ACCESS_KEY=your_r2_secret_access_key
+# CLOUD_BUCKET_NAME=ai-genesis-games
+# CLOUD_REGION=auto
+# CLOUD_PUBLIC_URL_BASE=https://pub-[account_id].r2.dev  # Optional custom domain
+
+# For AWS S3:
+# CLOUD_ENDPOINT_URL is not needed for AWS S3
+CLOUD_ACCESS_KEY_ID=your_aws_access_key_here
+CLOUD_SECRET_ACCESS_KEY=your_aws_secret_key_here
+CLOUD_BUCKET_NAME=ai-genesis-games
+CLOUD_REGION=us-east-1
+
+# Legacy AWS S3 variables (deprecated, use CLOUD_* variables above)
 AWS_ACCESS_KEY_ID=your_aws_access_key_here
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
 AWS_S3_BUCKET=your-s3-bucket-name
