--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,9 @@ pydantic>=2.4.0,<3.0.0
 pydantic-settings>=2.0.0,<3.0.0
 typing-extensions>=4.5.0
 
+# Cloud Storage (S3-compatible)
+boto3>=1.28.0,<2.0.0
+
 # Browser Testing (for Sentry Agent)
 playwright>=1.40.0,<2.0.0
 
